--- a/404.html
+++ b/404.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>MargemPro - Página não encontrada</title>
     <meta http-equiv="refresh" content="1; url=/" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X218H0C31V"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-X218H0C31V');
+    </script>
     <script>
       window.location.href = "/";
     </script>
