Button to reload

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             color: var(--primary);
         }
         .logo img {
+            cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -671,7 +672,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="images/logo1.png" alt="MargemPro Logo" height="60">
+                <img src="images/logo1.png" alt="MargemPro Logo" height="60" onclick="javascript:window.location.reload();">
             </div>
             <button class="mobile-menu-toggle">
                 <i class="fas fa-bars"></i>
