--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X218H0C31V"></script>
     <script>
@@ -1117,6 +1117,7 @@
                         <li><a href="https://facebook.com/margempro" target="_blank"><i class="fab fa-facebook"></i> /margempro</a></li>
                         <li><a href="https://x.com/margempro" target="_blank"><i class="fab fa-twitter"></i> @margempro</a></li>
                         <li><a href="https://threads.com/@margempro" target="_blank"><i class="fab fa-threads"></i> @margempro</a></li>
+                        <li><a href="https://youtube.com/@margempro" target="_blank"><i class="fab fa-youtube"></i> /margempro</a></li>
                     </ul>
                 </div>
             </div>
