--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MargemPro - Consulta Automatizada de Margens Consignáveis</title>
+    <meta name="apple-mobile-web-app-title" content="MargemPro - Consulta Automatizada de Margens Consignáveis">
+    <meta name="application-name" content="MargemPro - Consulta Automatizada de Margens Consignáveis">
     <meta name="description" content="Sistema de consulta automatizada de margens consignáveis para correspondentes bancários. Consulte CONSIG RN e UP BRASIL com rapidez e eficiência.">
     <meta name="keywords" content="margem consignável, consulta consig rn, up brasil, empréstimo consignado, correspondente bancário, consulta automatizada, margem rotativo, cartão benefício, software consignado, consulta margem, crédito consignado">
     <meta name="author" content="MargemPro">
     <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.margempro.com.br/">
     <meta property="og:title" content="MargemPro - Consulta Automatizada de Margens Consignáveis">
@@ -19,6 +22,7 @@
     <meta property="twitter:description" content="Sistema de consulta automatizada de margens consignáveis para correspondentes bancários. Consulte CONSIG RN e UP BRASIL com rapidez e eficiência.">
     <meta property="twitter:image" content="images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
