--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,12 @@
                 <div class="form-group">
                     <input type="tel" name="whatsapp" placeholder="WhatsApp (com DDD)" required>
                 </div>
+                <div class="form-group">
+                    <input type="tel" name="whatsapp" placeholder="WhatsApp (com DDD)" required>
+                </div>
+                <div class="form-group">
+                    <textarea name="mensagem" placeholder="Mensagem (opcional)" rows="4"></textarea>
+                </div>
                 <button type="submit" class="btn btn-accent">Começar Período Gratuito</button>
             </form>
         </div>
