--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
                     <input type="tel" name="whatsapp" placeholder="WhatsApp (com DDD)" required>
                 </div>
                 <div class="form-group">
-                    <textarea name="mensagem" placeholder="Mensagem (opcional)" rows="4"></textarea>
+                    <textarea name="mensagem" placeholder="Mensagem (opcional)" rows="4" maxlength="500"></textarea>
                 </div>
                 <button type="submit" class="btn btn-accent">Começar Período Gratuito</button>
             </form>
