--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
                 <div class="footer-column">
                     <h3>Contato</h3>
                     <ul>
-                        <!--li><a href="https://wa.me/5584996641274" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li-->
+                        <li><a href="https://wa.me/5584996641274" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li>
                         <li><a href="mailto:suporte@margempro.com.br"><i class="far fa-envelope"></i> suporte@margempro.com.br</a></li>
                         <!--li><a href="https://instagram.com/margempro" target="_blank"><i class="fab fa-instagram"></i> @margempro</a></li>
                         <li><a href="https://linkedin.com/company/margempro" target="_blank"><i class="fab fa-linkedin"></i> /margempro</a></li>
