--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
                 <div class="footer-column">
                     <h3>Contato</h3>
                     <ul>
-                        <li><a href="https://wa.me/5584996641274" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li>
+                        <li><a href="https://wa.me/5584996641274?text=Ol%C3%A1%20Margem%20Pro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li>
                         <li><a href="mailto:suporte@margempro.com.br"><i class="far fa-envelope"></i> suporte@margempro.com.br</a></li>
                         <!--li><a href="https://instagram.com/margempro" target="_blank"><i class="fab fa-instagram"></i> @margempro</a></li>
                         <li><a href="https://linkedin.com/company/margempro" target="_blank"><i class="fab fa-linkedin"></i> /margempro</a></li>
@@ -1141,7 +1141,7 @@
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/5584996641274?text=Ola%20Margem%20Pro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servicos"
+    <a href="https://wa.me/5584996641274?text=Ol%C3%A1%20Margem%20Pro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os"
        class="whatsapp-float"
        target="_blank"
        aria-label="Fale conosco no WhatsApp">
