--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-title" content="MargemPro - Consulta Automatizada de Margens Consignáveis">
     <meta name="application-name" content="MargemPro - Consulta Automatizada de Margens Consignáveis">
     <meta name="description" content="Sistema de consulta automatizada de margens consignáveis para correspondentes bancários. Consulte CONSIG RN e UP BRASIL com rapidez e eficiência.">
-    <meta name="keywords" content="margem consignável, consulta consig rn, up brasil, empréstimo consignado, correspondente bancário, consulta automatizada, margem rotativo, cartão benefício, software consignado, consulta margem, crédito consignado">
+    <meta name="keywords" content="margem consignável, margem pro, consulta consig rn, up brasil, empréstimo consignado, correspondente bancário, consulta automatizada, margem rotativo, cartão benefício, software consignado, consulta margem, crédito consignado">
     <meta name="author" content="MargemPro">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#ffffff">
@@ -1125,7 +1125,7 @@
                 <div class="footer-column">
                     <h3>Contato</h3>
                     <ul>
-                        <li><a href="https://wa.me/5584996641274?text=Ol%C3%A1%20Margem%20Pro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li>
+                        <li><a href="https://wa.me/5584996641274?text=Ol%C3%A1%20MargemPro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os" target="_blank"><i class="fab fa-whatsapp"></i> (84) 99664-1274</a></li>
                         <li><a href="mailto:suporte@margempro.com.br"><i class="far fa-envelope"></i> suporte@margempro.com.br</a></li>
                         <!--li><a href="https://instagram.com/margempro" target="_blank"><i class="fab fa-instagram"></i> @margempro</a></li>
                         <li><a href="https://linkedin.com/company/margempro" target="_blank"><i class="fab fa-linkedin"></i> /margempro</a></li>
@@ -1141,7 +1141,7 @@
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/5584996641274?text=Ol%C3%A1%20Margem%20Pro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os"
+    <a href="https://wa.me/5584996641274?text=Ol%C3%A1%20MargemPro,%20gostaria%20de%20saber%20mais%20sobre%20os%20seus%20servi%C3%A7os"
        class="whatsapp-float"
        target="_blank"
        aria-label="Fale conosco no WhatsApp">
